--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ img {
 }
 
 h1 {
-	color:#ffc107;
+	color:#eb122f;
 }
 h2 {
 	color:#ffc107;
@@ -25,50 +25,56 @@ h2 {
 }
 .name {
 	right:50px;
-	bottom:20px;
+	bottom:10px;
 	z-index:2;
 }
 
 
-.site-name h1:before {   
- content:"Piha";
-    font-size: 600%;
+.site-name h1::before {   
+    content: "Piha";
+    font-size: 80px;
     animation-name: head;
-    animation-duration: 8s;
-    animation-iteration-count: infinite;
+    animation-duration: 12s;
+    font-style: italic;
+    
 }
+
+
 .name h2 {  
 	animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) infinite;
 	  transform: translate3d(0, 0, 0);
 	  backface-visibility: hidden;
 	  perspective: 1000px;
+      font-size: 20px;
+      opacity: 0;
+      animation-delay: 12s;
  	
 }
 @keyframes shake {
   10%, 90% {
-    transform: translate3d(-1px, 0, 0);
+    transform: translate3d(-1px, 0, 0) ; opacity:1;
   }
   
   20%, 80% {
-    transform: translate3d(2px, 0, 0);
+    transform: translate3d(2px, 0, 0);opacity:1;
   }
 
   30%, 50%, 70% {
-    transform: translate3d(-4px, 0, 0);
+    transform: translate3d(-4px, 0, 0);opacity:1;
   }
 
   40%, 60% {
-    transform: translate3d(4px, 0, 0);
+    transform: translate3d(4px, 0, 0);opacity:1;
   }
 }
+
 @keyframes head {
-    0% {font-size:600%; opacity:1;}
-    25% {font-size:570%; opacity:0;}
-    50% {font-size:600%; opacity:1;}
-    65% {font-size:570%; opacity:0;}
-    80% {font-size:600%; opacity:1; content: "Changed Text"}
-    90% {font-size:570%; opacity:0;}
-    100% {font-size:600%;opacity:1; content: "Original Text"}
+    0% {font-size:100%; opacity:1;}
+    25% {font-size:200%; opacity:0;}
+    
+    50% {font-size:100%; opacity:1; content: "Scenic" ; color: yellow;}
+    75% {font-size:200%; opacity:0;}
+    100% {font-size:100%;opacity:1; content: "Beauty"}
 }
 
 
@@ -87,24 +93,26 @@ h2 {
 
 .piha-slides img.fade{
 	
-	animation:piha-minislide 20s forwards; 
+	animation:piha-minislide 9s forwards; 
 	opacity:0;
 	
+}
+.piha-slides img.slide-bottom-top{ 
+		
+    transform: translateY(100%);
+   animation: slide-bottom 4s 2s forwards ;
+ 
 }
 .piha-slides img.slide-right-left { 
 		
 	transform: translateX(100%);
-	animation: right-left 7s 10s forwards;
+	animation: right-left 4s 6s forwards ;
   
  }
-.piha-slides img.slide-bottom-top{ 
-		
-	 transform: translateY(100%);
-	animation: slide-bottom 4s 6s forwards;
-  
- }
+
  
- 
+
+
  
 @keyframes piha-minislide {25%{opacity:1;} 40%{opacity:0;}}
 
@@ -116,22 +124,8 @@ h2 {
      100% { transform: translateX(0); } 0% {transform: translateX(100%);}
 }
 
-#centered{
-    position: absolute;
-    top: 50%;
-    left:50%;
-    transform: translate(-50%,-50%);
-    color: yellow;
-    font-size: 50px;
-}
-#bottom-right{
-    position:absolute;
-    bottom:8px;
-    right:16px;
-    color: rgb(14, 241, 101);
-    font-style: italic;
-    font-size: 30px;
-}
+
+
 @keyframes fade-out {
     100% { opacity: 0; }
   }
@@ -166,12 +160,7 @@ h2 {
     top: 8px;
 }
 /*Part3*/
-.partthree{
-    background-color:rgb(223, 238, 236);
-    position: absolute;
-    right:0px;
-    left:0px;
-}
+
 #display{ position:relative;
     left:0px;
     font-size: 50px;
@@ -300,4 +289,8 @@ h2 {
     transform: translateX(0%);
     left: 0%;
   }
+}
+
+.slider{
+    width: 400px;
 }
