--- a/style.css
+++ b/style.css
@@ -117,10 +117,10 @@ h2 {
 @keyframes piha-minislide {25%{opacity:1;} 40%{opacity:0;}}
 
 
-@-webkit-keyframes slide-bottom {
+@keyframes slide-bottom {
      100% { transform: translateY(0); } 0% {transform: translateY(100%);}
 }
-@-webkit-keyframes right-left {
+@keyframes right-left {
      100% { transform: translateX(0); } 0% {transform: translateX(100%);}
 }
 
@@ -203,17 +203,20 @@ h2 {
 }
 
 #progressbar{
-    height: 300px;
+    height: 200px;
     position: relative;
+    width: 100px;
+    
     
 }
 
 #file{
     position: relative;
     height: 40px;
-    width:800px;
-    left:230px;
+    width:700px;
+    left:100px;
     top:40px;
+    ;
 }
 
 
@@ -276,6 +279,23 @@ h2 {
 }
 .flexslider-text .text-wrapper-2 {
  animation: 5s linear 0s move;
+}
+#girl1{
+    color:red;font-style: italic
+}
+#girl2{
+    color:red;font-style: italic;
+}
+#girl3{
+    color:red;font-style: italic
+}
+
+    
+#shiptext{
+    color:white; size: 1000px;
+}
+#shiptext2{
+    color:blue; background-color: #fff; font-style: italic;
 }
 
 @keyframes move {
