--- a/style.css
+++ b/style.css
@@ -281,13 +281,13 @@ h2 {
  animation: 5s linear 0s move;
 }
 #girl1{
-    color:red;font-style: italic
+    color:rgb(240, 159, 10);font-style: italic
 }
 #girl2{
-    color:red;font-style: italic;
+    color:rgb(240, 159, 10);font-style: italic;
 }
 #girl3{
-    color:red;font-style: italic
+    color:rgb(240, 159, 10);font-style: italic
 }
 
     
