--- a/style.css
+++ b/style.css
@@ -4,7 +4,9 @@ img {
     width: 100%;
     height:auto;
 }
-
+.container-fluid{
+    background-color:whitesmoke;
+}
 h1 {
 	color:#eb122f;
 }
@@ -126,18 +128,8 @@ h2 {
 
 
 
-@keyframes fade-out {
-    100% { opacity: 0; }
-  }
 
-@keyframes bottom-to-top{
-
-}
-    
-@keyframes right-to-left {
-   
-}
-/*part*/
+/*part2*/
 
 .advertisement{height: 500px;
     position: relative;
@@ -159,92 +151,11 @@ h2 {
     right:0px ;
     top: 8px;
 }
-/*Part3*/
-
-#display{ position:relative;
-    left:0px;
-    font-size: 50px;
-    
-    font-style:italic;
-    color:red;
-    
-}
-
-
-
-#date1{
-    position: relative;
-    top:50px;
-    left: 0px;
-}
-
-#date2{
-    position: relative;
-    top:70px;
-    left: 0px;
-}
-
-#name1{
-    position: absolute;
-    left:600px;
-    top: 115px;
-}
-
-#name2{
-    position:absolute;
-    left:600px;
-    top:170px;
-}
-
-#email1{
-    position: absolute;
-    left:600px;
-    top:225px;
-}
-
-#progressbar{
-    height: 200px;
-    position: relative;
-    width: 100px;
-    
-    
-}
-
-#file{
-    position: relative;
-    height: 40px;
-    width:700px;
-    left:100px;
-    top:40px;
-    ;
-}
-
-
-
-
-
-
-.navbar-nav .navbar  {
-	display: flex;
-    align-items: center;
-    justify-content: center;
-	padding:0;
-}
-.navbar-nav .navbar-expand-sm .navbar-nav .nav-link {
-	text-transform:uppercase;
-	line-height: 58px;
-	padding: 0 20px;
-	color:#000;
-}
-.navbar-nav .navbar-expand-sm .navbar-nav .nav-link:hover {
-	background:#000;
-	color:#fff;
-}
-
 
 .flexslider .slides img {
     height: auto;
     -moz-user-select: none;
+    user-select:none;
 }
 .flexslider .slides img {
     width: 100%;
@@ -309,8 +220,95 @@ h2 {
     transform: translateX(0%);
     left: 0%;
   }
-}
+ 
 
-.slider{
+} .slider{
     width: 400px;
 }
+/*Part3*/
+
+#display{ position:relative;
+    left:0px;
+    font-size: 50px;
+    
+    font-style:italic;
+    color:red;
+    
+}
+
+
+
+#date1{
+    position: relative;
+    top:50px;
+    left: 0px;
+}
+
+#date2{
+    position: relative;
+    top:70px;
+    left: 0px;
+}
+
+#name1{
+    position: absolute;
+    left:600px;
+    top: 115px;
+}
+
+#name2{
+    position:absolute;
+    left:600px;
+    top:170px;
+}
+
+#email1{
+    position: absolute;
+    left:600px;
+    top:225px;
+}
+
+
+
+
+/*Progressbar*/
+#progressbar{
+    height: 200px;
+    position: relative;
+    width: 100px;
+    
+    
+}
+
+#file{
+    position: relative;
+    height: 40px;
+    width:700px;
+    left:100px;
+    top:40px;
+    ;
+}
+
+
+
+
+/*navbar*/
+
+.navbar-nav .navbar  {
+	display: flex;
+    align-items: center;
+    justify-content: center;
+	padding:0;
+}
+.navbar-nav .navbar-expand-sm .navbar-nav .nav-link {
+	text-transform:uppercase;
+	line-height: 58px;
+	padding: 0 20px;
+	color:#000;
+}
+.navbar-nav .navbar-expand-sm .navbar-nav .nav-link:hover {
+	background:#000;
+	color:#fff;
+}
+
+
